Add Mapbox integration and action creation UI to Blickling fieldbook
